--- a/pages/cliente/perfil_cliente.html
+++ b/pages/cliente/perfil_cliente.html
@@ -207,6 +207,73 @@
             border: 1px solid #e74c3c;
             color: #e74c3c;
         }
+
+        .profile-image-section {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .profile-image-container {
+            position: relative;
+            width: 150px;
+            height: 150px;
+            margin: 0 auto 20px;
+            cursor: pointer;
+        }
+
+        .profile-image {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #f39c12;
+            background-color: #1a1a1a;
+        }
+
+        .upload-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: rgba(0, 0, 0, 0.6);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .profile-image-container:hover .upload-overlay {
+            opacity: 1;
+        }
+
+        .upload-overlay i {
+            font-size: 40px;
+            color: #f39c12;
+        }
+
+        .btn-upload-image {
+            background-color: transparent;
+            color: #f39c12;
+            border: 1px solid #f39c12;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .btn-upload-image:hover {
+            background-color: #f39c12;
+            color: #1a1a1a;
+        }
+
+        .btn-upload-image i {
+            margin-right: 8px;
+        }
     </style>
 </head>
 
@@ -229,19 +296,31 @@
     </header>
 
     <main class="profile-container">
-        <div class="profile-header">
-            <h1>Mi Perfil</h1>
-            <p>Gestiona tu información personal</p>
-        </div>
-
-        <div id="alertContainer"></div>
-
         <div class="profile-card">
-            <div class="profile-icon">
-                <i class="fas fa-user-circle"></i>
+            <div class="profile-image-section">
+                <div class="profile-image-container">
+                    <img id="profileImage" src="" alt="Foto de perfil" class="profile-image">
+                    <div class="upload-overlay">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+                <input type="file" id="imageInput" accept="image/jpeg,image/jpg,image/png" style="display: none;">
+                <button type="button" class="btn-upload-image">
+                    <i class="fas fa-camera"></i>Cambiar Foto
+                </button>
             </div>
 
-            <form id="profileForm">
+            <div class="profile-header">
+                <h1>Mi Perfil</h1>
+                <p>Gestiona tu información personal</p>
+            </div>
+
+            <div id="alertContainer"></div>
+
+            <!-- Formulario de Datos Personales -->
+            <form id="personalInfoForm" class="mb-5">
+                <h3 style="color: white; margin-bottom: 20px; border-bottom: 1px solid #555; padding-bottom: 10px;">
+                    Datos Personales</h3>
                 <div class="form-group">
                     <label for="nombre">Nombre Completo</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -252,32 +331,40 @@
                     <input type="email" id="email" name="email" required>
                 </div>
 
-                <div class="password-section">
-                    <h3>Cambiar Contraseña (Opcional)</h3>
-
-                    <div class="form-group">
-                        <label for="password">Nueva Contraseña</label>
-                        <input type="password" id="password" name="password"
-                            placeholder="Dejar en blanco para no cambiar">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="confirmPassword">Confirmar Nueva Contraseña</label>
-                        <input type="password" id="confirmPassword" name="confirmPassword"
-                            placeholder="Confirmar contraseña">
-                    </div>
-                </div>
-
                 <div class="btn-group">
-                    <button type="button" class="btn btn-secondary"
-                        onclick="window.location.href='dashboard_cliente.html'">
-                        Cancelar
-                    </button>
                     <button type="submit" class="btn btn-primary">
-                        Guardar Cambios
+                        Actualizar Datos
                     </button>
                 </div>
             </form>
+
+            <!-- Formulario de Contraseña -->
+            <form id="passwordForm" class="password-section" style="margin-top: 50px;">
+                <h3 style="border-bottom: none;">Seguridad</h3>
+
+                <div class="form-group">
+                    <label for="password">Nueva Contraseña</label>
+                    <input type="password" id="password" name="password" required placeholder="Mínimo 6 caracteres">
+                </div>
+
+                <div class="form-group">
+                    <label for="confirmPassword">Confirmar Nueva Contraseña</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required
+                        placeholder="Confirmar contraseña">
+                </div>
+
+                <div class="btn-group">
+                    <button type="submit" class="btn btn-secondary">
+                        Cambiar Contraseña
+                    </button>
+                </div>
+            </form>
+
+            <div class="btn-group" style="margin-top: 40px; border-top: 1px solid #555; padding-top: 20px;">
+                <button type="button" class="btn btn-secondary" onclick="window.location.href='dashboard_cliente.html'">
+                    Volver al Panel
+                </button>
+            </div>
         </div>
     </main>
 
@@ -314,10 +401,33 @@
             // Cargar datos del perfil
             await loadProfile();
 
-            // Manejar envío del formulario
-            document.getElementById('profileForm').addEventListener('submit', async (e) => {
+            // Cargar imagen de perfil desde localStorage
+            loadProfileImage();
+
+            // Configurar eventos de carga de imagen
+            const imageInput = document.getElementById('imageInput');
+            const uploadBtn = document.querySelector('.btn-upload-image');
+            const imageContainer = document.querySelector('.profile-image-container');
+
+            uploadBtn.addEventListener('click', () => imageInput.click());
+            imageContainer.addEventListener('click', () => imageInput.click());
+
+            imageInput.addEventListener('change', (e) => {
+                if (e.target.files && e.target.files[0]) {
+                    handleImageUpload(e.target.files[0]);
+                }
+            });
+
+            // Manejar envío del formulario de Datos Personales
+            document.getElementById('personalInfoForm').addEventListener('submit', async (e) => {
                 e.preventDefault();
-                await updateProfile();
+                await updatePersonalData();
+            });
+
+            // Manejar envío del formulario de Contraseña
+            document.getElementById('passwordForm').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                await updatePassword();
             });
         });
 
@@ -346,29 +456,11 @@
             }
         }
 
-        async function updateProfile() {
+        async function updatePersonalData() {
             const nombre = document.getElementById('nombre').value.trim();
             const email = document.getElementById('email').value.trim();
-            const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirmPassword').value;
 
-            // Validar contraseñas si se están cambiando
-            if (password || confirmPassword) {
-                if (password !== confirmPassword) {
-                    showAlert('Las contraseñas no coinciden', 'error');
-                    return;
-                }
-                if (password.length < 6) {
-                    showAlert('La contraseña debe tener al menos 6 caracteres', 'error');
-                    return;
-                }
-            }
-
-            // Preparar datos
             const updateData = { nombre, email };
-            if (password) {
-                updateData.password = password;
-            }
 
             try {
                 const response = await fetch('/api/perfil', {
@@ -382,7 +474,7 @@
                 const result = await response.json();
 
                 if (!response.ok) {
-                    throw new Error(result.error || 'Error al actualizar perfil');
+                    throw new Error(result.error || 'Error al actualizar datos');
                 }
 
                 // Actualizar sessionStorage
@@ -391,16 +483,103 @@
                     document.querySelector('.user-greeting').textContent = `¡Hola, ${result.usuario.nombre}!`;
                 }
 
-                showAlert('Perfil actualizado con éxito', 'success');
+                showAlert('Datos personales actualizados con éxito', 'success');
+
+            } catch (error) {
+                console.error('Error al actualizar datos:', error);
+                showAlert(error.message, 'error');
+            }
+        }
+
+        async function updatePassword() {
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
+
+            // Validar contraseñas
+            if (password !== confirmPassword) {
+                showAlert('Las contraseñas no coinciden', 'error');
+                return;
+            }
+            if (password.length < 6) {
+                showAlert('La contraseña debe tener al menos 6 caracteres', 'error');
+                return;
+            }
+
+            const updateData = { password };
+
+            try {
+                const response = await fetch('/api/perfil', {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(updateData)
+                });
+
+                const result = await response.json();
+
+                if (!response.ok) {
+                    throw new Error(result.error || 'Error al cambiar contraseña');
+                }
+
+                showAlert('Contraseña actualizada con éxito', 'success');
 
                 // Limpiar campos de contraseña
                 document.getElementById('password').value = '';
                 document.getElementById('confirmPassword').value = '';
 
             } catch (error) {
-                console.error('Error al actualizar perfil:', error);
+                console.error('Error al cambiar contraseña:', error);
                 showAlert(error.message, 'error');
             }
+        }
+
+        function loadProfileImage() {
+            const userId = sessionStorage.getItem('userId');
+            const savedImage = localStorage.getItem(`profileImage_${userId}`);
+            const profileImg = document.getElementById('profileImage');
+
+            if (savedImage) {
+                profileImg.src = savedImage;
+            } else {
+                // Usar icono por defecto (FontAwesome user-circle como SVG)
+                profileImg.src = 'data:image/svg+xml;charset=UTF-8,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"%3e%3cpath fill="%23f39c12" d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c39.77 0 72 32.24 72 72S295.8 272 256 272c-39.76 0-72-32.24-72-72S216.2 128 256 128zM256 448c-52.93 0-100.9-21.53-135.7-56.29C136.5 349.9 176.5 320 224 320h64c47.54 0 87.54 29.88 103.7 71.71C356.9 426.5 308.9 448 256 448z"/%3e%3c/svg%3e';
+            }
+        }
+
+        function handleImageUpload(file) {
+            // Validar tipo de archivo
+            const validTypes = ['image/jpeg', 'image/jpg', 'image/png'];
+            if (!validTypes.includes(file.type)) {
+                showAlert('Solo se permiten imágenes JPG, JPEG o PNG', 'error');
+                return;
+            }
+
+            // Validar tamaño de archivo (max 2MB)
+            const maxSize = 2 * 1024 * 1024; // 2MB
+            if (file.size > maxSize) {
+                showAlert('La imagen no debe exceder 2MB', 'error');
+                return;
+            }
+
+            // Leer y convertir a base64
+            const reader = new FileReader();
+            reader.onload = (e) => {
+                const base64Image = e.target.result;
+                const userId = sessionStorage.getItem('userId');
+
+                // Guardar en localStorage
+                localStorage.setItem(`profileImage_${userId}`, base64Image);
+
+                // Actualizar la imagen mostrada
+                document.getElementById('profileImage').src = base64Image;
+
+                showAlert('Foto de perfil actualizada correctamente', 'success');
+            };
+            reader.onerror = () => {
+                showAlert('Error al cargar la imagen', 'error');
+            };
+            reader.readAsDataURL(file);
         }
 
         function showAlert(message, type) {
