Agregar monitoreo de chats para el dueño del taller - Solicitud de seguridad

--- a/portal_taller.html
+++ b/portal_taller.html
@@ -208,6 +208,10 @@
                 <h3>Ver Reseñas</h3>
                 <p>Consulta las opiniones y valoraciones que han dejado tus clientes.</p>
             </a>
+            <a href="pages/taller/monitoreo_chats.html" class="action-card"><i class="fas fa-comments-dollar action-icon"></i>
+                <h3>Monitoreo de Chats</h3>
+                <p>Visualiza las conversaciones entre tus mecánicos y clientes para garantizar seguridad.</p>
+            </a>
             <a href="pages/taller/reportes_estadisticas.html" class="action-card"><i
                     class="fas fa-chart-line action-icon"></i>
                 <h3>Reportes y Estadísticas</h3>
